name:                token-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/token-server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      server
  exposed-modules:     Api.Api
                     , Api.Server
                     , Contracts.ERC20
                     , Types.Application
                     , Queries.Balance
                     , Queries.Transfer
                     , Queries.Transaction
                     , Types.Orphans
                     , Types.Transaction
                     , Types.Transfer
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , binary
                     , bytestring
                     , composite-aeson
                     , composite-base
                     , composite-opaleye
                     , composite-swagger
                     , data-default
                     , hashable
                     , haxl
                     , http-api-data
                     , lens
                     , mtl
                     , natural-transformation
                     , opaleye
                     , postgresql-simple
                     , servant-server
                     , servant-swagger
                     , string-conversions
                     , swagger2
                     , text
                     , vinyl
                     , wai
                     , wai-extra
                     , wai-cors
                     , warp
                     , web3
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , TypeOperators
                     , TypeFamilies
                     , FlexibleContexts
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , StandaloneDeriving
                     , GeneralizedNewtypeDeriving
                     , ScopedTypeVariables
                     , Arrows
                     , GADTs
                     , OverloadedStrings
                     , DeriveGeneric
                     , RecordWildCards
  ghc-options: -Werror, -Wall

executable token-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , token-server
  default-language:    Haskell2010

executable create-token-db
  hs-source-dirs:      db
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , postgresql-simple
                     , token-server
  default-language:    Haskell2010

executable token-indexer
  hs-source-dirs:      indexer
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , binary
                     , composite-base
                     , composite-opaleye
                     , mtl
                     , opaleye
                     , postgresql-simple
                     , text
                     , token-server
                     , web3
  default-language:    Haskell2010
  default-extensions:  MultiParamTypeClasses
                     , QuasiQuotes
                     , DataKinds
                     , TypeFamilies
                     , FlexibleInstances
                     , FlexibleContexts
                     , OverloadedStrings
                     , DeriveGeneric
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TypeApplications

test-suite token-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , token-server
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/token-server
